force-app/main/default/objects/Attendance__c/fields/Acadmic_Year__c.field-meta.xml
<CustomField>
    <fullName>Acadmic_Year__c</fullName>
    <formula>TEXT(YEAR(TODAY()) - IF(MONTH(TODAY()) &gt;= 7, 0, 1)) &amp; &apos;-&apos; &amp; 
TEXT(MOD(YEAR(TODAY()) - IF(MONTH(TODAY()) &gt;= 7, 0, 1) + 1, 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acadmic Year</label>
    <type>Text</type>
</CustomField>