force-app/main/default/objects/Attendance__c/fields/Date_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Attendance__c</fullName>
    <label>Date of Attendance</label>
    <type>DateTime</type>
</CustomField>