force-app/main/default/objects/Attendance__c/fields/Student_Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Hall_Ticket_No__c</fullName>
    <formula>Student_Id__r.Hall_Ticket_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Hall Ticket No</label>
    <type>Text</type>
</CustomField>