force-app/main/default/objects/Attendance__c/fields/Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Id</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>