force-app/main/default/objects/Attendance__c/fields/Total_Classes_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Classes_Attended__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Classes Attended</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>