force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employees__c</columns>
    <columns>Course__c</columns>
    <columns>Year__c</columns>
    <columns>Semester__c</columns>
    <columns>Subject__c</columns>
    <columns>Student_Id__c</columns>
    <columns>Total_Classes_Attended__c</columns>
    <columns>Student_Hall_Ticket_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>